--- a/public/frontend/assets/css/services.css
+++ b/public/frontend/assets/css/services.css
@@ -22,7 +22,7 @@
 }
 
 .container-Subscribe {
-    background: linear-gradient(90deg, #1b1b1e 0%, #435ED4 100%);
+    background: linear-gradient(90deg, #23316E 0%, #435ED4 100%);
     padding: 2rem;
     border-radius: .9rem;
     text-align: center;
