--- a/public/frontend/assets/css/home.css
+++ b/public/frontend/assets/css/home.css
@@ -1,5 +1,3 @@
-
-/* ################################ */
 .hero-home-content{
     width: 90%;
     margin-left: auto;
@@ -129,7 +127,7 @@ text-align: center;
     height: 100%;   
  }
  .home-box {
-    background-color: #d9d9d9;
+    background-color: #00000014;
     border-radius: 1rem;
     padding: 30px;
     /* text-align: center; */
@@ -217,6 +215,17 @@ height: 82px;
     clear: both;
 }
 
+.chatPot-margin{
+    margin-top: -40px;
+    /* position: absolute;
+    z-index: 100; */
+
+}
+
+#box-home .Features-box{
+    min-height: 350px;
+}
+
 @media (max-width: 1000px) {
     .hero-image-home-Trusted {
         display: none !important;
@@ -255,6 +264,8 @@ display: none;
     margin-top:147px !important
 
 }
+
+
 .FAQ-h3-home{
     font-size: 40px;
     font-weight: 600;
@@ -277,7 +288,18 @@ display: none;
 .swiper-button-div{
     display: none;
 }
+.whats-app {
+padding-bottom: 70px !important;
+}
+/* background: #00000014; */
+
 @media (max-width: 790px) {
+    .Our-Features-h3-text-top{
+margin-top: 31px !important;
+    }
+    .whats-app {
+        padding-bottom: 0px !important;
+        }
     .Our-Features-p{
         text-align: center;
     }
@@ -302,13 +324,13 @@ display: none;
         align-items: center;
     }
 
-
 .swiper-button-div{
     /* position: absolute; */
     display: flex;
     justify-content: center;
     /* left: 50%; */
     direction: rtl;
+    margin-top: 10px;
 }
 #box-home .Features-box{
     height: 340px;
@@ -319,6 +341,7 @@ display: none;
       display: flex;
       justify-content:space-evenly;
       padding:20px 40px;
+      margin-bottom: 0px !important;
     }
     .div-white-flex {
         display: block;
@@ -332,7 +355,7 @@ display: none;
     .section-white{
       
       padding:10px 40px;
-     margin-bottom: 40px;
+    
     margin-top: 27px !important;
     }
     .para-icon {
@@ -415,7 +438,7 @@ justify-content: center !important;
 }
 .btn-create-whats-app{
   
-   padding: 10px 20px !important;
+   padding: 10px 30px !important;
    font-size: 0.75rem !important;
    font-weight: 600 !important;
    line-height: 1.2rem !important;
@@ -485,13 +508,13 @@ justify-content:center
     margin-top:0px !important
  }
  .btn-iphone{
-    padding:10px 40px !important
+    padding:10px 50px !important
  }
 .ChatBot-right,.ChatBot-left{
     margin-top: 0px !important;
 }
 .home-box {
-    background-color: #d9d9d9;
+    
     border-radius: 1rem;
     padding: 30px;
     /* text-align: center; */
@@ -518,7 +541,7 @@ line-height: 28.8px !important;
     font-weight: 700;
     line-height: 38.4px;
     
-    margin-top: 2rem;
+    margin-top: 0rem;
     margin-bottom: .5rem;
     
 }
@@ -529,7 +552,7 @@ line-height: 28.8px !important;
     line-height: 19.4px;
     text-align: center;
     color: #525252;
-    margin-bottom:1.5rem;
+    margin-bottom:0rem;
 }
 .whats-app{
     margin-top: 30px !important;
@@ -542,4 +565,3 @@ line-height: 28.8px !important;
     
     }
 }
-
