--- a/public/frontend/assets/css/login.css
+++ b/public/frontend/assets/css/login.css
@@ -1,16 +1,28 @@
 
 /*login*/
+body {
+    /* display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #e4efff;
+    margin: 0;
+    font-family: Arial, sans-serif; */
+}
 
 .login-container {
-
+    /* background-color: #ffffff; */
     padding: 40px;
-
+    /* border-radius: 8px; */
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+    /* width: 100%; */
+    /* max-width: 400px; */
     text-align: center;
 }
 
 .login-container h1 {
     color: #1D4FA0;
-
+    /* margin-bottom: 30px; */
     font-weight: 700;
     font-size: 48px;
     line-height: 76.8px;
@@ -251,7 +263,9 @@
 
 
 /*success*/
-
+a{
+    text-decoration: none;
+}
 .success{
     margin: 2rem 0;
 }
@@ -265,6 +279,7 @@
     line-height: 19.2px;
 }
 
+
 .success-NoNsolid{
     border: 1px solid #002F87;
     color: #002F87;
@@ -273,6 +288,7 @@
 .success-solid{
     background-color: #002F87;
     color: #fff;
+    border: 1px solid #002F87;
 }
 
 
@@ -309,3 +325,7 @@
 }
 
 
+
+.text-color{
+    color: #002F87;
+}
