--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -239,18 +239,22 @@ a {
 
     /* padding: 25px 52px 26px 52px; */
     padding: 15px 42px 16px 42px;
+
 }
 
 .navbar .navbar-btn-login {
 
     background-color: var(--white-color);
     color: #29387E;
-    border: 2px solid linear-gradient(90deg, #374BA8 5.25%, #2FB7F0 77.6%);
+    border: 2px solid #2FB7F0 !important;
 
     margin-right: 8px;
 
 
 }
+
+
+
 
 /* 
 @media (max-width: 768px) {
@@ -322,7 +326,7 @@ a {
 
 
 /* error */
-.login-error{
+.login-error {
     color: #E81010;
     font-weight: 400;
     font-size: 16px;
@@ -331,7 +335,7 @@ a {
     margin-top: 10px;
 }
 
-.error-img{
+.error-img {
     margin-right: 7px;
     margin-top: -3px;
 }
@@ -401,12 +405,13 @@ a {
     margin-top: 11px;
 }
 
-.footer .copyright img{
+.footer .copyright img {
     width: 94px;
-margin: 0 8px;
+    margin: 0 8px;
 
 
 }
+
 @media (max-width: 768px) {
     .footer .social-icons {
         width: 100%;
@@ -433,7 +438,32 @@ margin: 0 8px;
 
     }
 
-    
+    .line {
+        width: 100%;
+        height: 10px;
+        border: 1px solid #E4E6EE
+    }
 
+
+}
+
+
+/*  ################################## wrapper###############################################  */
+/* .wrapper {
+    margin-top: 38.75rem;
+} */
+
+.wrapper .wrapper-content h2 {
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 64px;
+    color: var(--secondary-color);
+}
+
+.wrapper .wrapper-content p {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 38.4px;
+    color: #3A3A3A;
 
 }
