--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -439,7 +439,7 @@ a {
     width: 13.5px;
     height: 15.73px;
     top: 1.13px;
-    margin-right: 16px;
+    /* margin-right: 16px; */
     color: #3a3a3a;
 }
 
@@ -463,10 +463,7 @@ margin: 0 8px;
         width: 100%;
     }
 
-    .footer {
-        height: 24.875rem;
-    }
-
+  
   
 
     .footer .footer-links li a {
