--- a/public/frontend/assets/css/planing.css
+++ b/public/frontend/assets/css/planing.css
@@ -26,15 +26,12 @@
 .planing .planing-img {
     border-radius:1rem;
     padding: 0.625rem;
+    margin-right: 17.5px;
+
   
 }
 
-.planing .planing-img-m-left{
-    margin-left: 1.094rem;  
-}
-.planing .planing-img-m-right{
-    margin-right: 1.094rem; 
-}
+
 
 .planing .planing-content.right-plan .planing-img,
 .planing .planing-content.left-plan .planing-img {
@@ -156,7 +153,7 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 28.8px;
-    margin-left: 10px;;
+    margin-left: 14px;
 
 }
 
@@ -192,6 +189,10 @@
     background-color: #29387E;
 } */
 
+.planing .popular-plan{
+    text-align: end;
+    margin-bottom: 8px;
+}
 
 .planing .popular-plan span {
     background-color: #6974A5;
@@ -285,6 +286,9 @@ border-radius: 50px ;
   
     padding: 12px 23px;
 }
+.popular-plan{
+    margin-top: 14px;
+}
 
 .planing .planing-middle h6 span {
     font-weight: 500;
@@ -340,7 +344,7 @@ border-radius: 50px ;
 }
 
 .planing .planning-bottom ul li span {
-    font-size: 12px;
+    font-size: 14px;
     line-height: 19.2px;
   
 }
