--- a/public/frontend/assets/css/blog-details.css
+++ b/public/frontend/assets/css/blog-details.css
@@ -3,7 +3,7 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 22.4px;
-    color: #737373 !important
+    color: #737373 !important;
 }
 
 .breadcrumb-item-active {
