--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -378,20 +378,7 @@ a {
 }
 
 
-/* error */
-.login-error{
-    color: #E81010;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 25.6px;
-    margin-left: 10px;
-    margin-top: 10px;
-}
 
-.error-img {
-    margin-right: 7px;
-    margin-top: -3px;
-}
 
 /*  ################################## footer###############################################  */
 
@@ -485,9 +472,9 @@ margin: 0 8px;
 
 
 /*  ################################## wrapper###############################################  */
-/* .wrapper {
-    margin-top: 38.75rem;
-} */
+.wrapper {
+    margin-top: 7rem;
+}
 
 .wrapper .wrapper-content h2 {
     font-weight: 600;
