--- a/public/frontend/assets/css/home.css
+++ b/public/frontend/assets/css/home.css
@@ -210,6 +210,7 @@ align-items: center;
     width: 82px;
 height: 82px;
 
+
 }
 .clear{
     clear: both;
@@ -508,7 +509,8 @@ justify-content:center
     margin-top:0px !important
  }
  .btn-iphone{
-    padding:10px 50px !important
+    padding:10px 50px !important;
+    margin-bottom: 20px ;
  }
 .ChatBot-right,.ChatBot-left{
     margin-top: 0px !important;
