blog top and feature edit style:

--- a/public/frontend/assets/css/feature.css
+++ b/public/frontend/assets/css/feature.css
@@ -18,9 +18,9 @@
 .hero-image-header .img img{
     height: 33.875rem;
 }
-.btn-work-with-us {
+/* .btn-work-with-us {
     margin-bottom: 31px;
-}
+} */
 
 /*  ################################## wrapper###############################################  */
 
